commit translated contents

--- a/docs/visual-basic/misc/bc30502.md
+++ b/docs/visual-basic/misc/bc30502.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile combinare 'Shared' con '<specifier>' in una dichiarazione di proprietà
+title: Impossibile combinare 'Shared' con '<specifier>' in una dichiarazione di proprietà.
 ms.date: 07/20/2015
 f1_keywords:
 - bc30502
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30502
 ms.assetid: 93d554e1-215c-4779-874a-1b557de708b5
-ms.openlocfilehash: 02e7dd6b80b07e811812facab942ab8d6da4b889
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9282e62030072a6f766d44fe24f1c211f4423fec
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64647584"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409101"
 ---
-# <a name="shared-cannot-be-combined-with-specifier-on-a-property-declaration"></a>Impossibile combinare 'Shared' con '\<identificatore >' in una dichiarazione di proprietà
+# <a name="shared-cannot-be-combined-with-specifier-on-a-property-declaration"></a>Impossibile combinare 'Shared' con '\<specifier>' in una dichiarazione di proprietà.
 Si è provato a combinare il modificatore `Shared` con un identificatore che non è valido in tale combinazione in una dichiarazione di proprietà.  
   
  **ID errore:** BC30502  
@@ -25,4 +25,4 @@ Si è provato a combinare il modificatore `Shared` con un identificatore che non
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Shared](../../visual-basic/language-reference/modifiers/shared.md)
+- [Condivisa](../language-reference/modifiers/shared.md)
