--- a/docs/visual-basic/misc/bc30614.md
+++ b/docs/visual-basic/misc/bc30614.md
@@ -1,5 +1,5 @@
 ---
-title: Il metodo 'MustOverride' '<methodname>' non può essere chiamato con 'MyClass'
+title: Il metodo 'MustOverride '<methodname>' non può essere chiamato con 'MyClass'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30614
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30614
 ms.assetid: fc57af41-1552-46d1-9727-341f1835e661
-ms.openlocfilehash: 4cf5a823d77c98e85daf2cd31bdc92e6bb889950
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 05d1d573c95bc0b6f443c0e3c651c148194c526c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646801"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389773"
 ---
-# <a name="mustoverride-method-methodname-cannot-be-called-with-myclass"></a>Il metodo 'MustOverride' '\<NomeMetodo >' non può essere chiamato con 'MyClass'
+# <a name="mustoverride-method-methodname-cannot-be-called-with-myclass"></a>Il metodo 'MustOverride '\<methodname>' non può essere chiamato con 'MyClass'
 `MyClass` equivale a `Me`, ma tutte le chiamate al metodo su di essa sono trattate come se il metodo richiamato fosse `NotOverridable`.  
   
  **ID errore:** BC30614  
@@ -25,6 +25,6 @@ ms.locfileid: "64646801"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [MustOverride](../../visual-basic/language-reference/modifiers/mustoverride.md)
-- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
-- [NotOverridable](../../visual-basic/language-reference/modifiers/notoverridable.md)
+- [MustOverride](../language-reference/modifiers/mustoverride.md)
+- [MustInherit](../language-reference/modifiers/mustinherit.md)
+- [NotOverridable](../language-reference/modifiers/notoverridable.md)
