--- a/docs/visual-basic/misc/bc31419.md
+++ b/docs/visual-basic/misc/bc31419.md
@@ -1,5 +1,5 @@
 ---
-title: "' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore<typename>''."
+title: "' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore ' <typename> '."
 ms.date: 07/20/2015
 f1_keywords:
 - bc31419
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC31419
 ms.assetid: c44d2936-8c07-443a-b320-ac2bfbc1e9ec
-ms.openlocfilehash: b8f756945740b85d5862f2b1f971da5f80f88134
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: a3e4a0efef8e4b16bd260ba4511f45ab0cddea1a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408828"
 ---
-# <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-typename"></a>' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore\<' typeName >'.
-Un'espressione usa l' [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) con almeno un operando del tipo valore.  
+# <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-typename"></a>' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore ' \<typename> '.
+Un'espressione usa l' [IsNot Operator](../language-reference/operators/isnot-operator.md) con almeno un operando del tipo valore.  
   
  L'operatore `IsNot` consente di determinare se due riferimenti agli oggetti fanno riferimento a oggetti diversi. Confronta i valori del puntatore dei tipi riferimento ed è privo di significato con i tipi valore.  
   
@@ -29,5 +29,5 @@ Un'espressione usa l' [IsNot Operator](../../visual-basic/language-reference/ope
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [Procedura: Verificare se due oggetti sono uguali](../../visual-basic/programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Procedura: determinare se due oggetti sono uguali](../programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
