--- a/docs/visual-basic/misc/bc32059.md
+++ b/docs/visual-basic/misc/bc32059.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32059
 ms.assetid: 273b69df-910e-45d2-acac-632005d24c5a
-ms.openlocfilehash: ffb05f2da0df9cdbfb74322ab3490b7154069646
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7d365e32da43e146f2dc81abd092bbd1ea7b0dad
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618756"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411961"
 ---
 # <a name="array-lower-bounds-can-be-only-0"></a>I limiti inferiori della matrice possono essere solo '0'
 Un'istruzione di dichiarazione o una clausola `New` specifica una matrice con un limite inferiore diverso da 0.  
@@ -27,4 +27,4 @@ Un'istruzione di dichiarazione o una clausola `New` specifica una matrice con un
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
