--- a/docs/visual-basic/misc/bc32081.md
+++ b/docs/visual-basic/misc/bc32081.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32081
 ms.assetid: afcb30da-3973-4452-9cf3-c027f9866589
-ms.openlocfilehash: c32ecd38ca1306f2542639c4a6db75b87b3b3c0c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 667d953b46de12a65d1d648fed6e69e668c90393
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618707"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365488"
 ---
 # <a name="new-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a>Non è possibile specificare il vincolo 'New' più volte per lo stesso parametro di tipo
-Un elenco di vincoli include il [operatore New](../../visual-basic/language-reference/operators/new-operator.md) vincoli più volte.  
+Un elenco di vincoli include il [nuovo vincolo operator](../language-reference/operators/new-operator.md) più di una volta.  
   
  Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato al parametro di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere. Un tipo non può contenere più di un costruttore senza parametri e non è possibile specificare questo requisito più di una volta.  
   
@@ -27,4 +27,4 @@ Un elenco di vincoli include il [operatore New](../../visual-basic/language-refe
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
