--- a/docs/visual-basic/misc/bc32127.md
+++ b/docs/visual-basic/misc/bc32127.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32127
 ms.assetid: 68b745b5-8605-4bf3-a6ec-69e67b3cff2d
-ms.openlocfilehash: acef71b8f1b6d329c526577b7eec24713382f3d2
-ms.sourcegitcommit: 99b153b93bf94d0fecf7c7bcecb58ac424dfa47c
+ms.openlocfilehash: 605f7541a99c194d58c6e255a000aeea86e10efd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/25/2020
-ms.locfileid: "80249025"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402486"
 ---
 # <a name="is-operand-of-type-typename-can-only-be-compared-to-nothing-because-typename-is-a-nullable-type"></a>È possibile confrontare l'operando 'Is' del tipo 'typename' solo con 'Nothing' perché 'typename' è un tipo nullable
 Una variabile dichiarata come nullable è stata confrontata con un'espressione diversa da `Nothing` mediante l'operatore `Is` .  
@@ -21,7 +21,7 @@ Una variabile dichiarata come nullable è stata confrontata con un'espressione d
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore
   
-1. Per confrontare un tipo di valore `Nothing` nullable `Is` con un'espressione diversa dall'utilizzo dell'operatore, chiamare il `GetType` metodo sul tipo di valore nullable e confrontare il risultato con l'espressione, come illustrato nell'esempio seguente.  
+1. Per confrontare un tipo di valore nullable con un'espressione diversa `Nothing` da usando l' `Is` operatore, chiamare il `GetType` metodo sul tipo di valore nullable e confrontare il risultato con l'espressione, come illustrato nell'esempio seguente.  
   
 ```vb  
 Dim number? As Integer = 5  
@@ -35,5 +35,5 @@ End If
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di valore nullableNullable Value Types](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
-- [Operatore Is](../../visual-basic/language-reference/operators/is-operator.md)
+- [Tipi di valore Nullable](../programming-guide/language-features/data-types/nullable-value-types.md)
+- [Operatore Is](../language-reference/operators/is-operator.md)
