--- a/docs/visual-basic/misc/bc33004.md
+++ b/docs/visual-basic/misc/bc33004.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC33004
 ms.assetid: 22f27f4d-4bbd-4f8f-a6e8-0fc10efb268d
-ms.openlocfilehash: 5bae7490b901698ad376662a314c5d4a72bfc702
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 140c04b3193050b4140ce28e2aef10aa9eede70e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64648903"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385431"
 ---
 # <a name="implements-is-not-valid-on-operator-declaration"></a>Implements' non è valido nelle dichiarazioni di operatore
-Un' [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) specifica la parola chiave [Implements](../../visual-basic/language-reference/statements/implements-clause.md) .  
+Un' [Operator Statement](../language-reference/statements/operator-statement.md) specifica la parola chiave [Implements](../language-reference/statements/implements-clause.md) .  
   
- Solo una routine `Function` o `Sub` , una proprietà o un evento può implementare un membro di interfaccia. Per altre informazioni sull'implementazione, vedere.  
+ Solo una routine `Function` o `Sub` , una proprietà o un evento può implementare un membro di interfaccia. Per ulteriori informazioni sull'implementazione di, vedere.  
   
- Una routine `Operator` richiede le parole chiave `Public` e `Shared` e un operatore di conversione richiede la parola chiave `Widening` o `Narrowing` . Per altre informazioni, vedere [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md).  
+ Una routine `Operator` richiede le parole chiave `Public` e `Shared` e un operatore di conversione richiede la parola chiave `Widening` o `Narrowing` . Per altre informazioni, vedere [Operator Procedures](../programming-guide/language-features/procedures/operator-procedures.md).  
   
  **ID errore:** BC33004  
   
@@ -31,6 +31,6 @@ Un' [Operator Statement](../../visual-basic/language-reference/statements/operat
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
