--- a/docs/visual-basic/misc/bc36619.md
+++ b/docs/visual-basic/misc/bc36619.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36619
 ms.assetid: 1fd8c0dc-0e87-47b7-ab30-498809cca033
-ms.openlocfilehash: 73e2d16cd343727fe7241b4a36c2ffb7fa8e55ca
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a8ae940b3c75dda73fbce6d121ed8e07da0c7426
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970612"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398916"
 ---
 # <a name="equals-expected"></a>Previsto 'Equals'
 Una clausola `Join` o `Group Join` è stata specificata senza un operatore `Equals` . L'operatore `Equals` viene usato per identificare l'operazione `Boolean` per testare i campi chiave per gli elementi corrispondenti.  
@@ -34,8 +34,8 @@ Dim petOwnersGrouped = From pers In people _
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Combinare dati utilizzando join](../../visual-basic/programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
-- [Clausola Join](../../visual-basic/language-reference/queries/join-clause.md)
-- [Clausola Group Join](../../visual-basic/language-reference/queries/group-join-clause.md)
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [Procedura: Combinare dati utilizzando join](../programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
+- [Clausola join](../language-reference/queries/join-clause.md)
+- [Clausola Group Join](../language-reference/queries/group-join-clause.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../programming-guide/language-features/linq/index.md)
