--- a/docs/visual-basic/misc/bc30059.md
+++ b/docs/visual-basic/misc/bc30059.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30059
 ms.assetid: fdd5e7bb-6370-4a63-bbb6-23b15badb4c8
-ms.openlocfilehash: 69f7b8af2dcbfd37efd08bc3b2a879316ab7e03e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: dbb013a71b8c064271e9751dd205dbd6d576e860
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936162"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391443"
 ---
 # <a name="constant-expression-is-required"></a>È necessaria l'espressione costante
 Un'istruzione `Const` non inizializza correttamente una costante oppure una dichiarazione di matrice usa una variabile per specificare il numero di elementi.  
@@ -27,4 +27,4 @@ Un'istruzione `Const` non inizializza correttamente una costante oppure una dich
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Const](../../visual-basic/language-reference/statements/const-statement.md)
+- [Istruzione Const](../language-reference/statements/const-statement.md)
