--- a/docs/visual-basic/misc/bc30087.md
+++ b/docs/visual-basic/misc/bc30087.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30087
 ms.assetid: 81c056bb-267e-44ef-9a44-3a41273090ea
-ms.openlocfilehash: 61be4f67e2a85e5b82b6d51a7117a9635c3e98e5
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 9cfbf217a684626acf27e661885a0b9ed9e51ed2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935928"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380497"
 ---
 # <a name="end-if-must-be-preceded-by-a-matching-if"></a>'End If' deve essere preceduto da un oggetto 'If' corrispondente
 Un'istruzione `End If` si verifica senza un'istruzione `If` corrispondente. `End If` deve essere preceduto da un'istruzione `If` .  
@@ -29,4 +29,4 @@ Un'istruzione `End If` si verifica senza un'istruzione `If` corrispondente. `End
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione If...Then...Else](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [Istruzione If...Then...Else](../language-reference/statements/if-then-else-statement.md)
