--- a/docs/visual-basic/misc/bc30630.md
+++ b/docs/visual-basic/misc/bc30630.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30630
 ms.assetid: d858076a-9088-4ad0-9766-95029476bf9b
-ms.openlocfilehash: 08b4bd568a8231146217fd1eba1df57eba975c44
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ea11aa99a19e6bbe9a7a9c621d3f65aa7cdfa6dd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61759252"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415232"
 ---
 # <a name="end-get-must-be-preceded-by-a-matching-get"></a>'End Get' deve essere preceduto da un oggetto 'Get' corrispondente
 `End Get` viene usato per terminare le routine della proprietà `Get` . Il costrutto `End Get` è stato rilevato all'esterno di una routine della proprietà `Get` .  
@@ -27,4 +27,4 @@ ms.locfileid: "61759252"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
