--- a/docs/visual-basic/misc/bc30661.md
+++ b/docs/visual-basic/misc/bc30661.md
@@ -1,5 +1,5 @@
 ---
-title: Campo o una proprietà '<membername>' non è stato trovato
+title: Impossibile trovare il campo o la proprietà '<membername>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30661
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30661
 ms.assetid: 6854c427-37e5-4ab8-9731-f9d9e32ffd51
-ms.openlocfilehash: d64a079061661e432e1f0257444258fd474bc502
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 04cb28e1e67a56ee2414a59dbc042d9f3358796c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936591"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414979"
 ---
-# <a name="field-or-property-membername-is-not-found"></a>Campo o una proprietà '\<nomeMembro >' non è stato trovato
+# <a name="field-or-property-membername-is-not-found"></a>Impossibile trovare il campo o la proprietà '\<membername>'
 Viene fatto riferimento a un campo o a una proprietà per l'attributo.  
   
  **ID errore:** BC30661  
@@ -27,4 +27,4 @@ Viene fatto riferimento a un campo o a una proprietà per l'attributo.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (tipo e spazio dei nomi .NET)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [Istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md)
