--- a/docs/visual-basic/misc/bc30674.md
+++ b/docs/visual-basic/misc/bc30674.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30674
 ms.assetid: 2d473b0b-ca9e-43b5-9bcb-b00766bc90a4
-ms.openlocfilehash: 06ced6ebd88ae67a9e15e87e664e9afb58c69991
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bb75cc071d640d4e9728d86052faecb8405f65aa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646399"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414881"
 ---
 # <a name="end-synclock-must-be-preceded-by-a-matching-synclock"></a>'End SyncLock' deve essere preceduto da un oggetto 'SyncLock' corrispondente
-I blocchi`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .  
+`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .  
   
  **ID errore:** BC30674  
   
@@ -25,4 +25,4 @@ I blocchi`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione SyncLock](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [Istruzione SyncLock](../language-reference/statements/synclock-statement.md)
