--- a/docs/visual-basic/misc/bc30827.md
+++ b/docs/visual-basic/misc/bc30827.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30827
 ms.assetid: 577f8c0b-9e8a-433f-b504-9ddaa936c250
-ms.openlocfilehash: 8a0c27cdb758276a98ed45a3137066a36e449a38
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 900b7c1b921aadbfde9f294c6af8a45d39cf41ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352804"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408289"
 ---
 # <a name="d-can-no-longer-be-used-to-indicate-an-exponent-use-e-instead"></a>Non è più possibile utilizzare 'D' per indicare un esponente. Utilizzare 'E'
 Il carattere 'D' non può essere utilizzato per indicare un esponente.  
@@ -21,7 +21,7 @@ Il carattere 'D' non può essere utilizzato per indicare un esponente.
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Usare l'operatore `^` o i caratteri `E+` per indicare che è presente un esponente. Esempio:  
+- Usare l'operatore `^` o i caratteri `E+` per indicare che è presente un esponente. Ad esempio:  
   
     ```vb  
     Const Mole = 6.02E+23 ' Same as 6.02D23  
@@ -30,5 +30,5 @@ Il carattere 'D' non può essere utilizzato per indicare un esponente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore ^](../../visual-basic/language-reference/operators/exponentiation-operator.md)
-- [Tipi di dati numerici](../../visual-basic/programming-guide/language-features/data-types/numeric-data-types.md)
+- [Operatore ^](../language-reference/operators/exponentiation-operator.md)
+- [Tipi di dati numerici](../programming-guide/language-features/data-types/numeric-data-types.md)
