--- a/docs/visual-basic/misc/bc31051.md
+++ b/docs/visual-basic/misc/bc31051.md
@@ -1,5 +1,5 @@
 ---
-title: Namespace o di tipo '<name>' è già stato importato
+title: Lo spazio dei nomi o il tipo '<name>' è già stato importato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31051
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31051
 ms.assetid: e10f9047-6de5-486c-9c6d-bcbad03f824c
-ms.openlocfilehash: b9607afd8d805a6a0feadc109100baf49d09ff89
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3a1bb8713a48831fbb403b385841059ed93f996e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64601795"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399631"
 ---
-# <a name="namespace-or-type-name-has-already-been-imported"></a>Namespace o di tipo '\<nome >' è già stato importato
+# <a name="namespace-or-type-name-has-already-been-imported"></a>Lo spazio dei nomi o il tipo '\<name>' è già stato importato
 Si è provato a importare più volte uno spazio dei nomi.  
   
  **ID errore:** BC31051  
@@ -25,4 +25,4 @@ Si è provato a importare più volte uno spazio dei nomi.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (tipo e spazio dei nomi .NET)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [Istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md)
