--- a/docs/visual-basic/misc/bc31064.md
+++ b/docs/visual-basic/misc/bc31064.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31064
 ms.assetid: f0b8310d-68a1-4989-ac64-03b1861528ad
-ms.openlocfilehash: 05f1f7d35423c7bf10294d1be956fac6b999cdf6
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: b13fa5b7971f5856dc92c978d74f0a9ca52b6570
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352344"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405859"
 ---
 # <a name="set-parameter-must-have-the-same-type-as-the-containing-property"></a>Il parametro 'Set' deve essere dello stesso tipo della proprietà che lo contiene
 Il parametro per la routine di proprietà `Set` presenta un tipo diverso dalla proprietà a cui appartiene.  
@@ -21,7 +21,7 @@ Il parametro per la routine di proprietà `Set` presenta un tipo diverso dalla p
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Modificare il tipo di dati del parametro su `Set` in modo che corrisponda al tipo di dati per la proprietà. Esempio:  
+- Modificare il tipo di dati del parametro su `Set` in modo che corrisponda al tipo di dati per la proprietà. Ad esempio:  
   
     ```vb  
     Class Class1  
@@ -41,4 +41,4 @@ Il parametro per la routine di proprietà `Set` presenta un tipo diverso dalla p
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
