--- a/docs/visual-basic/misc/bc31085.md
+++ b/docs/visual-basic/misc/bc31085.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31085
 ms.assetid: 354e4c02-ca5f-4c27-93f9-50f5f1ad6be5
-ms.openlocfilehash: a801b2787431bda01e451bd5ffc786e140621e59
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9e3783bf448c34bdab3a2b579673191fc1ade6c7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649053"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399527"
 ---
 # <a name="date-constant-is-not-valid"></a>La costante di data non è valida
 Una costante di data è dichiarata con una data non valida.  
@@ -25,5 +25,5 @@ Una costante di data è dichiarata con una data non valida.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipo di dati Date](../../visual-basic/language-reference/data-types/date-data-type.md)
-- [Costanti ed enumerazioni](../../visual-basic/language-reference/constants-and-enumerations.md)
+- [Tipo di dati Date](../language-reference/data-types/date-data-type.md)
+- [Costanti ed enumerazioni](../language-reference/constants-and-enumerations.md)
