--- a/docs/visual-basic/misc/bc31115.md
+++ b/docs/visual-basic/misc/bc31115.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31115
 ms.assetid: a0d9bb48-b17c-469b-9d60-b6ee7951444d
-ms.openlocfilehash: 72f974d26ac2dda5037530a2845f1300c8bb9b36
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f0a8d058cc9ad04d1941dd86fb1a204506534758
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585381"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405677"
 ---
 # <a name="addhandler-declaration-must-end-with-a-matching-end-addhandler"></a>La dichiarazione 'AddHandler' deve terminare con un oggetto 'End AddHandler' corrispondente
 Una dichiarazione `AddHandler` deve terminare con un'istruzione `End AddHandler` .  
@@ -25,5 +25,5 @@ Una dichiarazione `AddHandler` deve terminare con un'istruzione `End AddHandler`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione AddHandler](../../visual-basic/language-reference/statements/addhandler-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
