--- a/docs/visual-basic/misc/bc31123.md
+++ b/docs/visual-basic/misc/bc31123.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31123
 ms.assetid: 8dbffccc-c1ba-45f5-a1b4-90889bb0a3fd
-ms.openlocfilehash: 7a111243c1778508e760a2b3105b19a7b108a1e5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cd9d0c7390e3b3af0cbace17084eafb865a0f2d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585089"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405573"
 ---
 # <a name="end-event-must-be-preceded-by-a-matching-custom-event"></a>'End Event' deve essere preceduto da un oggetto 'Custom Event' corrispondente
 Un'istruzione `End Event` si verifica senza un'istruzione `Custom Event` corrispondente. `End Event` deve essere preceduto da un'istruzione `Custom Event` corrispondente.  
@@ -25,4 +25,4 @@ Un'istruzione `End Event` si verifica senza un'istruzione `Custom Event` corrisp
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
