--- a/docs/visual-basic/misc/bc32066.md
+++ b/docs/visual-basic/misc/bc32066.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32066
 ms.assetid: cd43a92c-33fb-4def-bbf7-527d21bff93c
-ms.openlocfilehash: 0967420bdb40f1555929efea0dbd4e03306b7847
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0da1071d651ec669062174ab63cfe982ee569a52
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64755419"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413869"
 ---
 # <a name="type-arguments-unexpected-because-attributes-cannot-be-generics"></a>Argomenti di tipo imprevisti. Gli attributi non possono essere generics
 
@@ -45,5 +45,5 @@ Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Attribute>
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
