--- a/docs/visual-basic/misc/bc32082.md
+++ b/docs/visual-basic/misc/bc32082.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'è dichiarato 'come MustInherit' e non soddisfa il vincolo 'New' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' è dichiarato come ' MustInherit ' e non soddisfa il vincolo ' New ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32082
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32082
 ms.assetid: 597e5944-a61b-4858-ada5-efb80b27f26b
-ms.openlocfilehash: 0c740566d97c5a5c32f213e92c4d2d6cf05e4922
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 634cecbc5dfa1ab5c8556c4755525c58ea67b3b2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61943481"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365410"
 ---
-# <a name="type-argument-typeargumentname-is-declared-mustinherit-and-does-not-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a>Argomento di tipo '\<nomeargomentotipo >' è dichiarato 'come MustInherit' e non soddisfa il vincolo 'New' per il parametro di tipo '\<nomeparametrotipo >'
+# <a name="type-argument-typeargumentname-is-declared-mustinherit-and-does-not-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a>L'argomento di tipo ' \<typeargumentname> ' è dichiarato come ' MustInherit ' e non soddisfa il vincolo ' New ' per il parametro di tipo ' \<typeparametername> '
 Un tipo generico viene richiamato con una classe `MustInherit` come argomento di tipo, ma il parametro di tipo corrispondente viene dichiarato con il vincolo `New` .  
   
  Il vincolo `New` richiede che il tipo passato nell'argomento di tipo corrispondente debba supportare la creazione di oggetti. Tuttavia, una classe *astratta* , ovvero una classe dichiarata come `MustInherit`, non espone alcun costruttore perché non è possibile creare tutti gli oggetti in base ad essa.  
@@ -31,6 +31,6 @@ Un tipo generico viene richiamato con una classe `MustInherit` come argomento di
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Operatore New](../../visual-basic/language-reference/operators/new-operator.md)
-- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Operatore New](../language-reference/operators/new-operator.md)
+- [MustInherit](../language-reference/modifiers/mustinherit.md)
