--- a/docs/visual-basic/misc/bc36585.md
+++ b/docs/visual-basic/misc/bc36585.md
@@ -1,5 +1,5 @@
 ---
-title: «<elementname>'non è un parametro del metodo di estensione'<methodname>'definito '<typename>»
+title: "' <elementname> ' non è un parametro del metodo di estensione ' <methodname> ' definito in ' <typename> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36585
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36585
 ms.assetid: c83fb679-3559-473c-aaa9-6ff21e515f97
-ms.openlocfilehash: 3845c5b7e6c91e163f4982b84dc65babfd3c1675
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 04ee2afa30d3cbd4b16e33b3a58c115b423d35cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632445"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377353"
 ---
-# <a name="elementname-is-not-a-parameter-of-extension-method-methodname-defined-in-typename"></a>'\<NomeElemento >' non è un parametro del metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'
+# <a name="elementname-is-not-a-parameter-of-extension-method-methodname-defined-in-typename"></a>' \<elementname> ' non è un parametro del metodo di estensione ' \<methodname> ' definito in ' \<typename> '
 Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo di estensione.  
   
  **ID errore:** BC36585  
@@ -25,5 +25,5 @@ Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
