--- a/docs/visual-basic/misc/bc36631.md
+++ b/docs/visual-basic/misc/bc36631.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36631
 ms.assetid: bb2b03b6-6784-423a-b91a-cb7066c1d093
-ms.openlocfilehash: fc082bc4d6b38beef96225150cb09f85b1ef1364
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 7933178c3b63adf955a70809638ca519cf3ff725
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970430"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398825"
 ---
 # <a name="join-expected"></a>Previsto 'Join'
 Una clausola `Group Join` è stata specificata senza una parola chiave `Join` .  
@@ -34,7 +34,7 @@ Dim query = From var1 In collection1 _
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Combinare dati utilizzando join](../../visual-basic/programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
-- [Clausola Group Join](../../visual-basic/language-reference/queries/group-join-clause.md)
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [Procedura: Combinare dati utilizzando join](../programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
+- [Clausola Group Join](../language-reference/queries/group-join-clause.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../programming-guide/language-features/linq/index.md)
